--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
 
     defaultConfig {
         applicationId "dev.equestria.notifications"
-        minSdkVersion 21
+        minSdkVersion 27
         targetSdkVersion 33
 
-        versionCode 135
-        versionName "1.6.0"
+        versionCode 136
+        versionName "2.7.1"
         buildConfigField 'String', "NTFY_VERSION", '"1.16.0"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -113,6 +113,7 @@ dependencies {
 
     // Firebase, sigh ... (only Google Play)
     playImplementation 'com.google.firebase:firebase-messaging:23.1.1'
+    playImplementation 'com.google.firebase:firebase-analytics:21.2.0'
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
