--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         minSdkVersion 27
         targetSdkVersion 33
 
-        versionCode 136
-        versionName "2.7.1"
+        versionCode 137
+        versionName "3.1.0"
         buildConfigField 'String', "NTFY_VERSION", '"1.16.0"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -65,6 +65,7 @@ android {
             '-Xjvm-default=all-compatibility' // https://stackoverflow.com/a/71234042/1440785
         ]
     }
+    namespace 'io.heckel.ntfy'
 }
 
 // Disables GoogleServices tasks for F-Droid variant
