--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,19 +4,21 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 33
-
     defaultConfig {
-        applicationId "dev.equestria.notifications"
+        applicationId "dev.equestria.haven"
         minSdkVersion 28
-        targetSdkVersion 33
+        targetSdkVersion 34
+        compileSdk 34
 
-        versionCode 145
-        versionName "3.1.8"
+        versionCode 146
+        versionName "4.0.0"
         buildConfigField 'String', "NTFY_VERSION", '"1.16.0"'
+
+        buildConfigField 'boolean', 'FIREBASE_AVAILABLE', 'false'
+        buildConfigField 'boolean', 'RATE_APP_AVAILABLE', 'false'
+        buildConfigField 'boolean', 'INSTALL_PACKAGES_AVAILABLE', 'true'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -40,18 +42,10 @@ android {
         }
     }
 
-    flavorDimensions "store"
-    productFlavors {
-        play {
-            buildConfigField 'boolean', 'FIREBASE_AVAILABLE', 'true'
-            buildConfigField 'boolean', 'RATE_APP_AVAILABLE', 'true'
-            buildConfigField 'boolean', 'INSTALL_PACKAGES_AVAILABLE', 'false'
-        }
-        fdroid {
-            buildConfigField 'boolean', 'FIREBASE_AVAILABLE', 'false'
-            buildConfigField 'boolean', 'RATE_APP_AVAILABLE', 'false'
-            buildConfigField 'boolean', 'INSTALL_PACKAGES_AVAILABLE', 'true'
-        }
+    kotlinOptions {
+        freeCompilerArgs = [
+            '-opt-in=kotlin.RequiresOptIn'
+        ]
     }
 
     compileOptions {
@@ -66,13 +60,9 @@ android {
         ]
     }
     namespace 'io.heckel.ntfy'
-}
-
-// Disables GoogleServices tasks for F-Droid variant
-android.applicationVariants.all { variant ->
-    def shouldProcessGoogleServices = variant.flavorName == "play"
-    def googleTask = tasks.findByName("process${variant.name.capitalize()}GoogleServices")
-    googleTask.enabled = shouldProcessGoogleServices
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 // Strips out REQUEST_INSTALL_PACKAGES permission for Google Play variant
@@ -93,40 +83,36 @@ android.applicationVariants.all { variant ->
 
 dependencies {
     // AndroidX, The Basics
-    implementation "androidx.appcompat:appcompat:1.5.1"
-    implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.core:core-ktx:1.13.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "androidx.activity:activity-ktx:1.6.1"
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation "androidx.activity:activity-ktx:1.9.0"
+    implementation "androidx.fragment:fragment-ktx:1.7.0"
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
     // JSON serialization
-    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Room (SQLite)
-    def room_version = "2.4.3"
+    def room_version = "2.6.1"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // OkHttp (HTTP library)
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
-    // Firebase, sigh ... (only Google Play)
-    playImplementation 'com.google.firebase:firebase-messaging:23.1.1'
-    playImplementation 'com.google.firebase:firebase-analytics:21.2.0'
-
     // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
 
     // Swipe down to refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // Material design
-    implementation "com.google.android.material:material:1.7.0"
+    implementation "com.google.android.material:material:1.12.0"
 
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Image viewer
