--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ apply plugin: 'kotlin-kapt'
 
 android {
     defaultConfig {
-        applicationId "dev.equestria.haven"
+        applicationId "dev.equestria.ponypush"
         minSdkVersion 28
         targetSdkVersion 34
         compileSdk 34
 
         versionCode 146
-        versionName "4.0.0"
+        versionName "3.1.9"
         buildConfigField 'String', "NTFY_VERSION", '"1.16.0"'
 
         buildConfigField 'boolean', 'FIREBASE_AVAILABLE', 'false'
